# monopy

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/monopy/: cli.py  main.py
src/monopy/core/: board.py  player.py
src/monopy/state/: engine.py  game_manager.py
src/monopy/web/: server.py
src/monopy/web/static/: app.js  index.html  style.css
